[workspace]
resolver = "2"
members = ["promessa-controller-common", "security-controller", "engenho-promessa"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/engenho-promessa-controllers"
authors = ["pleme-io"]

[workspace.dependencies]
promessa-controller-common = { path = "promessa-controller-common" }
security-controller = { path = "security-controller" }
engenho-promessa = { path = "engenho-promessa" }
promessa-types = { path = "../promessa/promessa-types" }
promessa-runtime = { path = "../promessa/promessa-runtime" }
promessa-store = { path = "../promessa/promessa-store" }
shigoto-dag = { path = "../shigoto/shigoto-dag" }
shikumi = { path = "../shikumi" }
cofre-types = { path = "../cofre/cofre-types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
schemars = { version = "0.8", features = ["derive", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = { version = "0.1" }
thiserror = { version = "2" }
anyhow = { version = "1" }
tracing = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
blake3 = { version = "1" }
kube = { version = "0.96", features = ["derive", "runtime", "client", "rustls-tls"] }
kube-runtime = { version = "0.96" }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
futures = { version = "0.3" }
clap = { version = "4", features = ["derive", "env"] }
proptest = { version = "1" }

[workspace.lints]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
