[workspace]
resolver = "2"
members = [
  "promessa-controller-common",
  "security-controller",
  "engenho-promessa",
  # AKEYLESS-VALIDATION-PLATFORM (pleme-io/theory) — three CRDs + the
  # controllers and API binary that drive akeyless-nix-images digests
  # through the typed deterministic validation chain.
  "validation-crds",
  "validation-api",
  "validation-controllers",
  # Reconciler engine — universal dispatcher for
  # TypedAction::ReconcilerApply emissions. Houses the concrete
  # Reconciler impls (CartorioAdmit / GhcrTagRevoke / HarborMirror)
  # per VIGGY-LEGOS Part IV + CONVERGENCE-SUBSTRATE §III.2.
  "reconciler-engine",
  # Validation store — SeaORM-backed typed persistence for the
  # AkeylessImageValidation domain. Five entities mirror the CRD
  # shapes (validation_run / scan_finding / reconciler_outcome /
  # decision_audit / digest_provenance). Single source-of-truth that
  # every API face (REST/gRPC/GraphQL/MCP/SDK) projects from. Adopts
  # the kiroku MetadataStore dual sync/async runtime pattern.
  "validation-store",
  # Scanner catalog — typed ScannerImpl per ScannerKind (OCI image +
  # args template + target field + output format parser). Reusable
  # substrate component fleet-wide — validation-controllers is the
  # primary consumer, but kenshi BuildPipeline / future workflows /
  # SDK generators all import the same catalog so scanner provisioning
  # stays fleet-coherent (Compounding #1: solve once).
  "scanner-catalog",
  # private-push — typed Rust CLI replacing the deprecated
  # `scripts/private-push.sh` shell scripts in this repo and
  # `akeylesslabs/akeyless-nix-images/`. Same shape (kubectl
  # port-forward → in-cluster Zot → skopeo + cosign keyless) but
  # typed CLI args, structured errors, and unit-testable URL/tag
  # derivation. User directive 2026-05-22: "shell scripting you can
  # throw away for rust/tatara-lisp".
  "private-push",
  # validation-events — typed event schema for cross-process
  # security-posture streaming. Published to NATS on every
  # validation-store write (action dispatch, decision audit, scan
  # finding, phase transition). Consumers (alerting, dashboards,
  # downstream pipelines, future kenshi cross-cluster rebroadcast)
  # subscribe to typed topics like `validation.posture.>`. Reusable
  # — any pleme-io crate or external SDK can depend on this without
  # pulling validation-controllers.
  "validation-events",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/engenho-promessa-controllers"
authors = ["pleme-io"]

[workspace.dependencies]
promessa-controller-common = { path = "promessa-controller-common" }
security-controller = { path = "security-controller" }
engenho-promessa = { path = "engenho-promessa" }
validation-crds = { path = "validation-crds" }
validation-controllers = { path = "validation-controllers" }
# axum + transports for the API binary
axum = { version = "0.7", features = ["ws"] }
async-graphql = { version = "7" }
async-graphql-axum = { version = "7" }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
prometheus = { version = "0.14", features = ["process"] }
url = { version = "2" }
uuid = { version = "1", features = ["v4", "serde"] }
promessa-types = { path = "../promessa/promessa-types" }
promessa-runtime = { path = "../promessa/promessa-runtime" }
promessa-store = { path = "../promessa/promessa-store" }
shigoto-dag = { path = "../shigoto/shigoto-dag" }
shikumi = { path = "../shikumi" }
cofre-types = { path = "../cofre/crates/cofre-types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
schemars = { version = "0.8", features = ["derive", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-std", "io-util", "signal"] }
async-trait = { version = "0.1" }
thiserror = { version = "2" }
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = { version = "1" }
# Real Ed25519 signing for OutcomeChain receipts (publicly verifiable;
# same algorithm + publisher-key identity as cartorio/tabeliao).
ed25519-dalek = { version = "2" }
const-hex = { version = "1" }
kube = { version = "0.96", features = ["derive", "runtime", "client", "rustls-tls"] }
kube-runtime = { version = "0.96" }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
futures = { version = "0.3" }
clap = { version = "4", features = ["derive", "env"] }
proptest = { version = "1" }
# SeaORM-backed persistence stack for validation-store. rustls so we
# stay aligned with kube/reqwest TLS choice across the workspace.
# sqlx-sqlite for dev, sqlx-postgres for prod, with-chrono +
# with-uuid + with-json so DateTime/Uuid/Value entity fields work
# without a conversion layer.
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
  "with-json",
] }
ulid = { version = "1", features = ["serde"] }
tempfile = { version = "3" }
# gRPC face — `validation-api` serves a tonic server on :50051
# alongside its axum :8080. The proto definitions live in
# `validation-api/proto/`; `validation-api/build.rs` compiles them
# via tonic_build at build time.
tonic = { version = "0.12" }
tonic-reflection = { version = "0.12" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
tonic-build = { version = "0.12" }
prost-build = { version = "0.13" }
# NATS client — typed pub/sub on `validation.posture.>` for the
# security-posture stream. validation-controllers publishes;
# downstream consumers (alerters, dashboards, future kenshi
# cross-cluster rebroadcast) subscribe.
async-nats = { version = "0.42" }
validation-events = { path = "validation-events" }

[workspace.lints]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
