[package]
name = "validation-controllers"
description = "The four AKEYLESS-VALIDATION-PLATFORM reconcilers: AkeylessImageValidationController, AkeylessEphemeralTenantController, ScanJobController, OutcomeChainAppender. All kube-rs informer-driven; no timers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
validation-crds = { workspace = true }
promessa-types = { workspace = true }
security-controller = { path = "../security-controller" }
reconciler-engine = { path = "../reconciler-engine" }
validation-store = { path = "../validation-store" }
scanner-catalog = { path = "../scanner-catalog" }
promessa-controller-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
kube = { workspace = true }
kube-runtime = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
